# nmr-citrate-and-machine-learning-metabolomics

./: .gitignore  Californian Housing Dataset.py  Dockerfile  Dockerfile.test  LICENSE  ML Model Notes.md  NMR Sim Test.py  PKA_STUDY.db  PKA_STUDY.db-journal  README.md  bufferdata.csv  chelationnotes.md  docker-compose.yml  experiments.csv  flake.nix  graph.csv  graph.py  main.py  notes.md  out.csv  pHcalc test.py  pillbuys-citrate-table.csv  pillbuys-formation.csv  pka.txt  pyproject.toml  ratios.csv  requirements.txt  speciationnotes.md  stocks.txt  temp-graph.py
Create_Training_Data_Function/: createTrainingData.py  oldresults.txt  output.prof  pyproject.toml  results.txt  trainingDataLib.py  useCase.py
Create_Training_Data_Function/2025-08-06_10-16-50/: components.csv  components.npy  intensities.csv  intensities.npy  positions.csv  positions.npy  scales.npy
Create_Training_Data_Function/2025-08-06_10-20-29/: intensities.npy  scales.npy
Create_Training_Data_Function/Casmdb_Data/: samples.csv  spectra.csv
app/: Californian Housing Dataset.py  Clean Fitting Data.py  Experiment Definition.py  Experiments load.py  Final Single Metabolite.py  Get Data Pipeline.py  Hilbert Transform Metabolite Randomisation Model Hold Back.py  Hilbert Transform Single Metabolite.py  Hilbert Transformer Metabolite Randomisation Model Hold Back.py  Ligand Binding Plot.py  MATPLOTLIB_THEME_README.md  Metabolite Randomisation Model Hold Back.py  Metabolite Randomisation Model.py  NMR Sim Concentration Model.py  NMR Sim Concentration Multi Metabolite.py  NMR Sim Test.py  PKA_STUDY.db  Test Morgan.py  Testing Updated Morgan's Code.py  View Morgans Spectra.py  debye huckel test.py  environment.yml  graph.py  metal_experiments.csv  mlp_study.db  new_metal_experiments.csv  pHcalc test.py  plot_config.py  preprocessing test.py  pyproject.toml  reference_concentration_study.db  requirements.txt  torch tes.py
app/Morgan-Spectra/: Synthetic_Mixture_Lookup.xlsx
app/__marimo__/session/: Experiments load.py.json  Hilbert Transform Metabolite Randomisation Model Hold Back.py.json  Hilbert Transform Single Metabolite.py.json  NMR Sim Concentration Model.py.json  NMR Sim Concentration Multi Metabolite.py.json  NMR Sim Test.py.json
app/experimental/: eppendorfs.csv  metal_eppendorfs.csv  metal_eppendorfs_again.csv  metal_eppendorfs_blank.csv  na-eppendorfs.csv  na_eppendorfs_again.csv  new_metal_eppendorfs_blank.csv
app/manim/: example.py
app/model_database/: metabolite_randomisation.db  metabolite_randomisation_holdback.db  reference_concentration_study.db
app/morgan/: JNP and Numba.md  Original Code.md  createTrainingData.py  main.py  oldresults.txt  output.prof  qm.py  results.txt  trainingDataLib.py  useCase.py
app/morgan/Casmdb_Data/: metabolites.csv
app/morgancode/: oldresults.txt  qm.py  useCase.py
app/morgancode/Casmdb_Data/: couplings.csv  multiplets.csv
app/morgancopy/: createTrainingData.py  trainingDataLib.py
app/output-graph/: experiments.csv  pka.txt  stocks.txt
app/phfork/: pHfork.py
app/spectra/: 1.nmrium  10.nmrium  11.nmrium  12.nmrium  13.nmrium  14.nmrium  15.nmrium  16.nmrium  17.nmrium  18.nmrium  19.nmrium  2.nmrium  20.nmrium  21.nmrium  22.nmrium  23.nmrium  3.nmrium  4.nmrium  5.nmrium  6.nmrium  7.nmrium  8.nmrium  9.nmrium
(+8519 files in other folders)
