[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blue>=0.9.1",
    "marimo>=0.14.13",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]
