[project]
name = "create-training-data-function"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.6,<3.10"
dependencies = [
    "matplotlib>=3.3.4",
    "nmrsim>=0.5.2",
    "numba>=0.53.1",
    "numpy>=1.19.5",
    "pandas>=0.25.3",
    "tqdm>=4.64.1",
]
