[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blue>=0.9.1",
    "chempy>=0.9.0",
    "marimo>=0.14.13",
    "matplotlib>=3.10.3",
    "nmrsim>=0.6.0.post1",
    "numpy>=2.1.3",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "phcalc>=0.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "torch>=2.7.1",
    "torchaudio",
    "torchvision",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/rocm6.0/"
package = "torch"
explicit = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/rocm6.0/"
package = "torchvision"
explicit = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/rocm6.0/"
package = "torchaudio"
explicit = true

