[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blue>=0.9.1",
    "chempy>=0.9.0",
    "h5py>=3.14.0",
    "jax[cuda]>=0.6.2",
    "jaxlib>=0.6.2",
    "marimo>=0.14.17",
    "matplotlib>=3.10.3",
    "nmrglue>=0.11",
    "numba>=0.61.2",
    "numpy>=2.1.3",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "phcalc>=0.2.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "sparse>=0.17.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = {index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
